--- a/2018/11/ARTS-2018-11-18.md
+++ b/2018/11/ARTS-2018-11-18.md
@@ -2,7 +2,215 @@
  [Algorithm ] (#algorithm)
  algo
 
- [Review](#review)
+ [Review 聊聊Java里面的引用传递](#review)
+ 
+ 聊聊Java里面的"引用传递"
+ 
+ 长久以来，在Java语言里面一直有一个争论，就是Java语言到底是值传递（pass-by-value）还是引用传递（pass-by-reference），有的人说是值传递，有的人说是引用传递，两边各执一词，从而误导了很多开发者，更有甚者告诉开发者说不必纠结Java到底是值传递还是引用传递，只要能用就行了，但事实真的是这样吗？ 答案是否定的。
+ 
+ 为了弄清这两个概念，我们先要理解这两个概念本身的意思：
+ 
+ 首先值传递本身这个名字，我感觉就误导了不少人，对于值传递你可以理解成是数据的内存地址传递，并非是数据本身，或者叫它是指针。在维基百科里面，关于指针有清晰的描述：
+ 
+ In computer science, a pointer is a programming language object that stores the memory address of another value located in computer memory. A pointer references a location in memory。
+ 
+ 然后，我们看引用传递中的引用的在维基百科上的描述：
+ 
+ In computer science, a reference is a value that enables a program to indirectly access a particular datum, such as a variable's value or a record, in the computer's memory or in some other storage device.
+ 
+ 简单的说，引用本身就代表了数据，改变引用相当于改变了数据本身。
+ 
+ 
+ 根据概念的定义再回到Java语言里面，就会发现对Java本身来说，它只有指针传递也就是值传递，并非是引用传递。到这里，我相信有一部分读者可能已经接受不了，因为在Java里面大多数时候，我们都是讲基本类型，引用类型，从没听过什么指针的概念。导致这样的原因其实跟早期的Sun公司宣传策略有关系，我们知道Java语言，其实是从C语言借鉴改进过来的，其中一个主要的优点就是不允许我们像C那样可以通过指针直接操作内存区域，为了这个事情，Sun公司替换了概念称Java的指针为引用，从而在Java语言的发展历程中导致了更大的困惑，持续演变至今。事实就是Sun公司命名错误，当然Java已经发展了很多年，Oracle接盘后也犯不上纠正命名的问题。结果就是懂的人永远都知道是怎么回事，不懂的人一直分不清这两个概念。
+ 
+ 
+ 只有认清了Java里面存在指针，承认指针，我们才能更加自信的理解Java语言。
+ 
+ 我们来看一个简单的例子：
+ 
+ ```
+ class Dog{
+        public String name;
+ 
+        public Dog() {
+        }
+ 
+        public Dog(String name) {
+             this.name = name;
+         }
+ 	}
+ ```
+ 然后，我们试着创建一个Dog对象：
+ ```
+ Dog dog=null; //1
+ System.out.println(dog.name);
+ dog=new Dog();//2
+ 
+ ```
+ 然后运行一下，我们会看到一个异常：
+ ```
+ Exception in thread "main" java.lang.NullPointerException
+ ```
+ 注意这个异常，叫空指针异常，在Java里面任何对象没有初始化的时候，如果我们使用其内部属性，就会抛出上面的信息，这也从侧面反映了dog这个变量的作用，其实就是指针，而并非引用。对于已经实例化的对象，如果我们没有重写toString方法，打印指针会得到一串类名组合+内存地址转换的十六进制字符串。
+ 
+ 我们接着来看一个例子：
+ 
+ 
+ ```
+     public static void change(String point){
+        point="new value";
+     }
+ 
+     public static void swapString(){
+         String orgin="orgin";
+         System.out.println(orgin);
+         change(orgin);
+         System.out.println("==================after==================");
+         System.out.println(orgin);
+ 
+ 
+     }
+ ```
+ 
+ 如果在main方法里面，执行swapString()方法，输出的结果都是orgin。
+ 
+ 对于Dog对象也一样，如下：
+ ```
+     public static void change(Dog dog){
+        dog=new Dog("CAT");
+        dog.name="cat";
+     }
+ 
+ 
+     public static void swapDog(){
+         Dog dog=new Dog("tom");
+         System.out.println(dog.name);
+         change(dog);
+         System.out.println("==================after==================");
+         System.out.println(dog.name);
+     }
+ ```
+ 
+ 最终输出的结果都是tom，好像从未执行过change方法一样。
+ ```
+ tom
+ ==================after==================
+ tom
+ ```
+ 
+ 
+ 这是为什么？ 你可能要说很简单啊，方法里面的作用域，只在方法里生效，出了方法就无效了。真的是这样吗？ 接着看下面，我们稍微改动一下change方法：
+ 
+ ```
+     public static void change(Dog dog){
+ 	   dog.name="new_tom";
+        dog=new Dog("CAT");
+        dog.name="cat";
+     }
+ ```
+ 
+ 同样，在main方法执行，输出的结果是：
+ ```
+ tom
+ ==================after==================
+ new_tom
+ ```
+ 
+ 这里面，如果不理解值传递（指针传递）和引用传递的区别，其实是很难明白原因的：
+ 
+ 
+ ```
+     public static void change(Dog dog){
+        dog=new Dog("CAT");//3 memory location：8888
+        dog.name="cat";//4
+     }
+ 
+ 
+     public static void swapDog(){
+         Dog dog=new Dog("tom");//1  memory location：7777
+         System.out.println(dog.name);
+         change(dog);//2
+         System.out.println("==================after==================");
+         System.out.println(dog.name);
+     }
+ ```
+ 
+ 我们加上序号之后，来分析一下，首先在第一步，我们创建了一个Dog对象，其中dog变量是指针（或者按Java的习惯叫引用，但其实是不正确的），指针存的是内存地址，而并非是内存中的数据本身，我们假设内存地址是7777，然后在第二步，将dog（指针）引用，传给了change方法，在第三步，因为我们新创建了一个Dog，并把dog指针指向了新的对象，这里假设其在堆上的内存地址是8888，然后并给内存地址=8888的Dog对象的name赋值了cat，然后方法执行结束，最后回到swapDog方法，继续执行，此时swapDog方法dog对象的指针仍然是7777，所以并没有任何变化。
+ 
+ 图示如下：
+ 
+ [img]
+ 
+ 注意change方法执行后，没有指针指向内存地址8888的对象，故会在下一次gc时回收。
+ 
+ 接着我们分析下，微调后的change方法：
+ ```
+     public static void change(Dog dog){
+ 	   dog.name="new_tom";// 2.1
+        dog=new Dog("CAT");
+        dog.name="cat";
+     }
+ ```
+ 
+ 在第2.1步，我们通过dog指针=7777的数据，重新改变了其名称，这意味着内存地址7777的数据，被修改了，后面的两行改的是内存地址=8888的数据，所以最终结果是改变后的。
+ 
+ 
+ 注意，如果Java语言是引用传递的话，那么最终的结果name肯定是cat，因为引用传递的修改，指的就是数据本身，而并非地址。
+ 
+ 
+ 
+ 上面关于值传递（指针传递）和引用传递，说的有点抽象，我打个比方：
+ 
+ 指针指的是你的名字，通过指针可以找到数据本身，然后操作数据，但如果指针本身（非数据本身）变了，也就是你名字变了，但其实跟你没有关系，你自己还是你自己，你可以重新在换个名字代表你。
+ 
+ 引用指的是你本身，如果本身变了，比如你换了个发型，这个时候，无论你换多个名字（指针），你都一样是你，改变不了你发型换了的事实。
+ 
+ 所以，这个时候如果按照值传递（指针传递）的理解，来看上面的例子，你就会恍然大悟。在change方法里面dog的指针已经被替换成了8888，而8888地址代表的是新的对象
+ 所以不会改变7777的对象的内容，在微调后的版本中，我们直接改变了7777地址数据的name，所以最终的结果也是改变后的。
+ 
+ 
+ 总结：
+ 
+ Java语言本身是值传递，也叫做指针传递，虽然我们一直叫引用类型，但其实它实际上是一个指针，而真正的引用传递改变的是数据本身的内容，如Lisp和Fortran语言，无论哪种方式，我们只要理解了其本质，就可以掌握的更好。
+ 
+ 
+ 
+ 
+ 参考链接：
+ 
+ http://tutorials.jenkov.com/java-concurrency/java-memory-model.html
+ 
+ https://www.guru99.com/java-stack-heap.html
+ 
+ 
+ https://stackoverflow.com/questions/40480/is-java-pass-by-reference-or-pass-by-value?answertab=votes#tab-top
+ 
+ 
+ https://stackoverflow.com/questions/41956753/do-multiple-threads-using-the-same-object-in-java-make-a-copy-of-it
+ 
+ 
+ https://en.wikipedia.org/wiki/Reference_(computer_science)#Language_support
+ 
+ https://en.wikipedia.org/wiki/Pointer_(computer_programming)
+ 
+ http://www.javadude.com/articles/passbyvalue.htm
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
 
  [Technique spark2.1版本中遇到的一个bug](#technique)
 
