20181118arts提交算法，目录调整

--- a/2018/11/ARTS-2018-11-18.md
+++ b/2018/11/ARTS-2018-11-18.md
@@ -1,5 +1,5 @@
 
- [Algorithm leetcode_872 ] (#algorithm)
+ [Algorithm leetcode_872] (#algorithm)
 
  [Review 聊聊Java里面的引用传递](#review)
 
@@ -12,7 +12,7 @@
 
 https://leetcode.com/problems/leaf-similar-trees/
 
-```
+```java
     public static boolean leafSimilar(TreeNode root1,TreeNode root2){
         //比较两颗子树的叶子节点是否相似
         List<Integer> list1=new ArrayList<>();
