增加review部分的内容

--- a/2018/11/ARTS-2018-11-25.md
+++ b/2018/11/ARTS-2018-11-25.md
@@ -1,7 +1,7 @@
 
  [Algorithm](#algorithm)
 
- [Review](#review)
+ [Review 关于Java的BIO,NIO和AIO的演进](#review)
 
  [Technique 关于拷贝对象引用到local变量的一些思考](#technique)
 
@@ -12,6 +12,89 @@
 
 
 # Review
+
+
+### 前言
+
+Java里面的IO模型种类较多，主要包括BIO，NIO和AIO，每个IO模型都有不一样的地方，那么这些IO模型是如何演变呢？
+
+### BIO
+
+BIO全称是Blocking IO，是JDK1.4之前的传统IO模型，本身是同步阻塞模式，针对网络通信都是一请求一应答的方式，虽然简化了上层的应用开发，但在性能和可靠性方面存在着巨大瓶颈，试想一下如果每个请求都需要新建一个线程来专门处理，那么在高并发的场景下，机器资源很快就会被耗尽，所以只能通过不断的增加和扩容硬件资源来满足高并发和低延迟需求，极大地增加了企业的成本。
+
+
+### NIO
+
+由于BIO的缺点，导致Java在JDK1.0至JDK3.0中，网络通信模块的性能一直是短板，所以很多人更倾向于使用C/C++开发高性能服务端。为了强化Java在服务端的市场，终于在JSR-51也就是JDK4.0的时候发布了Java NIO，可以支持非阻塞IO。并新增了java.nio的包，提供很多异步开发的API和类库。
+
+主要的类和接口如下：
+
+（1）进行异步IO操作的缓冲区ByteBuffer
+
+（2）进行异步IO操作的管道Pipe
+
+（3）进行各种IO操作的Channel，主要包括ServerSocketChannel和SocketChannel
+
+（4）实现非阻塞IO的多路复用器Selector
+
+NIO主要有buffer、channel、selector三种技术的整合，通过零拷贝的buffer取得数据，每一个客户端通过channel在selector（多路复用器）上进行注册。服务端不断轮询channel来获取客户端的信息。channel上有connect,accept（阻塞）、read（可读）、write(可写)四种状态标识。根据标识来进行后续操作。所以一个服务端可接收无限多的channel。不需要新开一个线程。大大提升了性能。
+
+
+新的nio类库，促进了异步非阻塞编程的发展和应用，但仍然有一些不足之处：
+
+（1）没有统一的文件属性，例如读写权限
+
+（2）api能力比较弱，例如目录的及联创建和递归遍历，往往需要自己完成。
+
+（3）底层操作系统的一些高级API无法使用
+
+（4）所有的文件操作都是同步阻塞调用，在操作系统层面上并不是异步文件读写操作。
+
+
+### AIO
+
+AIO，其实是NIO的改进优化，也被称为NIO2.0，在2011年7月，也就是JDK7的版本中发布，它主要提供了三个方面的改进：
+
+（1）提供了能够批量获取文件属性的api，通过SPI服务，使得这些API具有平台无关性。
+
+（2）提供了AIO的功能，支持基于文件的异步IO操作和网络套接字的异步操作
+
+（3）完成了JSR-51定义的通道功能等。
+
+AIO 通过调用accept方法，一个会话接入之后再次调用（递归）accept方法，监听下一次会话，读取也不再阻塞，回调complete方法异步进行。不再需要selector 使用channel线程组来接收。
+
+
+### NIO与Netty
+
+既然Java拥有了各种IO体系，那么为什么还会出现Netty这种框架呢？
+
+Netty出现的主要原因，如下：
+
+（1）Java NIO类库和API繁杂众多，使用麻烦。
+
+（2）Java NIO封装程度并不高，常常需要配合Java多线程编程来使用，这是因为NIO编程涉及到Reactor模式。
+
+（3）Java NIO异常体系不完善，如客户端面临断连，重连，网络闪断，半包读写，网络阻塞，异常码流等问题，虽然开发相对容易，但是可靠性和稳定性并不高。
+
+（4）Java NIO本身的bug，修复较慢。
+
+
+
+注意，真正的异步非阻塞io，是需要操作系统层面支持的，在windows上通过IOCP实现了真正的异步io，所以Java的AIO的异步在windows平台才算真正得到了支持，而在Linux系统中，仍然用的是epoll模式，所以在Linux层面上的AIO，并不是真正的或者纯的异步IO，这也是Netty里面为什么采用Java的NIO实现的，而并非是AIO，主要原因如下：
+
+（1）AIO在linux上底层实现仍使用EPOLL，与NIO相同，因此在性能上没有明显的优势
+
+（2）Windows的AIO底层实现良好，但Netty的开发者并没有把Windows作为主要使用平台，所以优化考虑Linux
+
+
+### 总结
+
+本文主要介绍了Java里面IO模型的演变和发展，这也是Java在服务端领域大放异彩的一个重要原因，了解这些知识之后，我们再去学习高性能的Netty框架，将会更加容易。
+
+
+
+
+
 
 
 # Technique
