--- a/2018/11/ARTS-2018-11-25.md
+++ b/2018/11/ARTS-2018-11-25.md
@@ -1,5 +1,5 @@
 
- [Algorithm](#algorithm)
+ [Algorithm  trim-a-binary-search-tree ](#algorithm)
 
  [Review 关于Java的BIO,NIO和AIO的演进](#review)
 
@@ -9,6 +9,26 @@
 
 
 # Algorithm
+
+https://leetcode.com/problems/trim-a-binary-search-tree/
+
+```
+
+    public static TreeNode trimBST(TreeNode root, int L, int R) {
+        //如果，节点等于nul，就返回nul
+        if (root == null) return null;
+
+        //如果当前的节点值，小于范围最小值，就返回右子树，否则就返回左子树
+        if (root.val < L) return trimBST(root.right, L, R);
+        if (root.val > R) return trimBST(root.left, L, R);
+        //
+        root.left = trimBST(root.left, L, R);
+        root.right = trimBST(root.right, L, R);
+
+        return root;
+    }
+
+```
 
 
 # Review
