--- a/2018/12/ARTS-2018-12-01.md
+++ b/2018/12/ARTS-2018-12-01.md
@@ -1,5 +1,5 @@
 
- [Algorithm](#algorithm)
+ [Algorithm Unique Email Addresses](#algorithm)
 
  [Review 什么是回调函数（CallBack）](#review)
  
@@ -9,7 +9,20 @@
 
 
 # Algorithm
+```
+   public static int numUniqueEmails(String[] emails) {
+        HashSet<String > sets=new HashSet<>();
+        for (String email:emails) {
+            String suffix=email.substring(email.indexOf("@"));
+            sets.add(suffix);
 
+        }
+
+
+        return sets.size();
+
+    }
+```
 
 # Review
 
