string to lower case

--- a/2018/12/ARTS-2018-12-08.md
+++ b/2018/12/ARTS-2018-12-08.md
@@ -1,5 +1,5 @@
 
- [Algorithm](#algorithm)
+ [Algorithm String to lower case](#algorithm)
 
  [Review 一次ArrayList的使用不当导致线上jstorm任务启动失败的案例](#review)
 
@@ -9,6 +9,29 @@
 
 
 # Algorithm
+
+小写字母a-z的ascii码是97-122
+大写字母A-Z的ascii的码是65-90
+
+在Java里面，字符串底层是char数组，通过ascii码判断
+范围得出来是大小写，然后加32既能转成大写。
+
+```
+    public static String toLowerCase(String str) {
+        char[] chr=str.toCharArray();
+        StringBuilder sb=new StringBuilder();
+        for (char c: chr) {
+
+            if(c>='A'&&c<='Z'){
+                c= (char) (c+ 32);
+            }
+            sb.append(c);
+
+        }
+        return  sb.toString();
+    }
+```
+
 
 
 # Review
