提交字符串反转的算法

--- a/2018/12/ARTS-2018-12-23.md
+++ b/2018/12/ARTS-2018-12-23.md
@@ -1,5 +1,5 @@
 
- [Algorithm](#algorithm)
+ [Algorithm Reverse String ](#algorithm)
 
  [Review](#review)
 
@@ -9,6 +9,27 @@
 
 
 # Algorithm
+
+```
+    public static String reverseString(String s) {
+        char orgin[]=s.toCharArray();
+
+        int len=orgin.length-1;
+        int start=0;
+
+
+        while(start<len){
+            char temp=orgin[len];
+            orgin[len]=orgin[start];
+            orgin[start]=temp;
+            len--;
+            start++;
+
+        }
+
+        return new String(orgin);
+    }
+```
 
 
 # Review
