提交arts增加了技术模块的内容

--- a/2018/12/ARTS-2018-12-23.md
+++ b/2018/12/ARTS-2018-12-23.md
@@ -3,7 +3,7 @@
 
  [Review](#review)
 
- [Technique](#technique)
+ [Technique Spring中Filter和Interceptor的区别](#technique)
 
  [Share 操作系统之CPU知识扫盲](#share)
 
@@ -36,6 +36,49 @@
 
 
 # Technique
+
+
+
+### Filter
+
+Filter是servlet规范中定义的java web组件, 在所有支持java web的容器中都可以使用。filter在实现上是通过函数的递归回调实现。
+
+filter可以在servlet容器，过滤每一个到来的http请求以及每一个响应的请求，也就是说使用filter可以做到，在某个请求到达要访问的资源，例如jsp页面，servlet，静态页面的之前和之后做一些过滤处理，并且支持链条式的执行。
+
+![image](http://www.mkjava.com/tutorial/images/filter.png)
+
+
+filter可以在servlet容器的web.xml里面进行配置，其的实现类里面主要有三个方法：
+
+(1) init方法启动服务器时加载过滤器的实例，并调用init()方法来初始化实例；
+
+(2)doFilter方法，在所有的满足配置url-pattern的请求，每一次请求时都只调用方法doFilter()进行处理；
+
+(3)destroy方法停止服务器时调用destroy()方法，销毁实例。
+
+### Interceptor
+
+Interceptor不是servlet规范中的java web组件, 而是Spring提供的组件, 功能上和Filter差不多. 但是实现上和Filter不一样。实际上Interceptor可以在任何具有Java环境的情况下实现，原理和Spring AOP类似，其底层就是采用了代理模式+反射来实现的。可以用来做一些通用的事情，如log记录，方法耗时，参数校验等。
+
+
+Spring的拦截器和filter比较相似，但仅仅在Spring Context中生效，因此可以用来实现更加复杂的控制管理功能，因为拦截器可以访问所有的Spring Context。
+
+![image](http://www.mkjava.com/tutorial/images/interceptor.png)
+
+
+拦截器也有三个主要的方法：
+
+（1）preHandle() – 在handler执行之前，返回 boolean 值，true 表示继续执行，false 为停止执行并返回。
+
+（2）postHandle() – 在handler执行之后, 可以在返回之前对返回的结果进行修改
+
+（3）afterCompletion() – 在请求完全结束后调用，可以用来统计请求耗时等等
+
+
+
+总结：
+
+Filter的执行，其实是在Interceptor的前面，因此如果某个请求不合法，其实在filter时候就能过滤掉，如果filter通过之后，想要更加大的控制这个时候就得使用Interceptor，因此可以访问所有的Spring Context，所以可以实现更加复杂的功能。
 
 
 # Share
