--- a/2018/12/ARTS-2018-12-30.md
+++ b/2018/12/ARTS-2018-12-30.md
@@ -1,5 +1,5 @@
 
- [Algorithm](#algorithm)
+ [Algorithm NumSpecialEquivGroups](#algorithm)
 
  [Review](#review)
 
@@ -9,6 +9,38 @@
 
 
 # Algorithm
+
+/***
+ * 给定一个字符串数组，根据特定规则去重计数
+ * 每个字符串的偶数位数上的字符串，和位置没有关系，只要都包含即可
+ * 每个字符串的奇数位数上的字符串，和位置没有关系，只要都包含即可
+ *
+ * 比如abc cba 可以认为是相等的，acb和bac是相等的
+ * 比如abcd cadb是相等的
+ * 比如abcde ebcda是相等的
+ */
+
+```java
+    public static int numSpecialEquivGroups(String[] A) {
+        Set<String> set=new HashSet<>();
+        for(String s:A){
+            int [] map1=new int[256];
+            int [] map2=new int[256];
+            for (int i = 0; i < s.length(); i++) {
+                char c=s.charAt(i);
+                System.out.println(c+"  "+ (int)(c) );
+                if(i%2==0){
+                    map1[s.charAt(i)]++;
+                }else{
+                    map2[s.charAt(i)]++;
+                }
+            }
+            int hashCode= (Arrays.toString(map1) + " " + Arrays.toString(map2)).hashCode();
+            set.add(hashCode+"");
+        }
+    return set.size();
+    }
+```
 
 
 # Review
