--- a/2019/01/ARTS-2019-01-06.md
+++ b/2019/01/ARTS-2019-01-06.md
@@ -1,5 +1,5 @@
 
- [Algorithm](#algorithm)
+ [Algorithm String-Recoder-Log-Files](#algorithm)
 
  [Review](#review)
 
@@ -10,6 +10,79 @@
 
 # Algorithm
 
+```java
+    public String[] reorderLogFiles(String[] logs) {
+
+        //通过优先级队列，来实现排序
+        PriorityQueue<String> queue=new PriorityQueue<String>(new LetterComparator());
+
+        List<String> digitLogs = new ArrayList();
+
+        List<String> results = new ArrayList<String>();
+
+        for(String log:logs){
+            if(isDigitLog(log)){//判断第一个字符
+                digitLogs.add(log);
+            }else{
+                queue.add(log);
+            }
+
+        }
+
+        while(!queue.isEmpty()){
+            results.add(queue.poll());
+        }
+
+        results.addAll(digitLogs);
+
+
+       return results.toArray(new String[results.size()]);
+
+    }
+
+    private static boolean isDigitLog(String logLine) {
+        return Character.isDigit(logLine.charAt(logLine.indexOf(' ') + 1));
+    }
+
+
+
+
+
+  static  public class IntegerComparator implements Comparator<Integer>{
+
+        @Override
+        public int compare(Integer o1, Integer o2) {
+//            return o2.compareTo(o1);
+            return o1.compareTo(o2);
+        }
+    }
+
+
+
+  static  public class LetterComparator implements Comparator<String>{
+
+        @Override
+        public int compare(String str1, String str2) {
+
+            int spaceIndex1=str1.indexOf(' ');
+            int spaceIndex2=str2.indexOf(' ');
+
+            String word1=str1.substring(spaceIndex1+1);
+            String word2=str2.substring(spaceIndex2+1);
+            int status=word1.compareTo(word2);
+
+            if(status==0){
+                String identifier1=str1.substring(0,spaceIndex1);
+                String identifier2=str1.substring(0,spaceIndex2);
+                return identifier2.compareTo(identifier1);
+            }
+
+            return status;
+        }
+    }
+
+
+```
 
 # Review
 
