--- a/2018/12/ARTS-2018-12-30.md
+++ b/2018/12/ARTS-2018-12-30.md
@@ -1,7 +1,7 @@
 
  [Algorithm NumSpecialEquivGroups](#algorithm)
 
- [Review](#review)
+ [Review Verb types](#review)
 
  [Technique](#technique)
 
@@ -44,6 +44,183 @@
 
 
 # Review
+https://dictionary.cambridge.org/grammar/british-grammar/about-verbs/verbs-types
+https://dictionary.cambridge.org/grammar/british-grammar/about-verbs/verbs-types
+
+###  主要动词
+
+主要动词主要用来表示行为，时间，状态，大多数动词在英语中都是主要动词。
+
+如：
+
+```
+1,We [went] home straight after the show.
+在展出之后，我们直接回家了。
+2,It [snowed] a lot that winter.
+那个冬天下雪很多
+3,Several different types of volcano [exist].
+存在几种不同类型的火山。
+```
+
+
+###
+连接动词
+
+一些主要动词也被称为连接动词，也称系动词，这些动词后面可以跟名词词组，形容词词组，副词词组，介词词组，如：
+
+```
+appear
+feel
+look
+seem
+sound
+be
+get
+remain
+smell
+taste
+become
+```
+
+例子：
+
+```
+A face appeared at the window . It was Pauline. (介词词组)
+
+He is a cousin of mine （名词词组）
+
+This coat feels good （形容词词组）
+
+She remained outside while her sister went into the hospital. (副词词组)
+
+```
+
+### 助动词
+
+助动词共有三种，分别是be，do和have。 助动词可以出现在主动词之前。
+
+
+助动词be：
+
+助动词be用于展示持续和被动语态：
+
+```
+I am waitting for Sally to come home （表示持续）
+
+Her car was stolen from outside her house （被动语态）
+
+```
+
+助动词do：
+
+助动词do用于疑问，否定和强调，如：
+
+```
+Does she live locally？ （疑问句）
+
+They did not know which house it was. （否定）
+
+I do like your new laptop！ （强调）
+```
+
+
+助动词have：
+
+助动词have用于表达完成，如：
+
+```
+I have lost my memory stick. Have you seen it anywhere? (现在完成时)
+
+She had seen my car outside the shop （过去完成时）
+```
+
+
+
+### 仅仅存在助动词没有主要动词
+
+助动词也可以单独出现，在特定的上下文中:
+
+A: Does she play the clarinet?
+
+B: Yes, She Does.
+
+A: It hasn't snowed at all this year , has it ?
+
+B: No, it hasn't.
+
+
+### be do and have as main verbs
+
+Be, do, have 可以用于助动词或者主要动词？
+
+
+
+助动词 | 作为主要动词 | 作为助动词
+---|---|---
+be |She’s a professional photographer.   | He’s thinking of moving to New Zealand.
+do | I need to do some work this evening.|Do you like Thai food, Jim?
+have|The children have lunch at twelve o’clock.|We haven’t been to the cinema for ages.
+
+
+需要记住一点，当do和have是主要动词的时候，我们必须使用助动词去提问问题和否定：
+
+A：What does Janet do？
+
+B：She's teacher.
+
+否定: What  does Janet ?
+
+I dont't have a car， I only have a bike.
+
+### 情态动词
+
+主要的情态动词是：
+```
+can
+may
+must
+should
+would
+could
+might
+shall
+will
+```
+
+情态动词具有确定性和必要性相关的意思：
+
+```
+We’ll be there around 7.30. (十分确定)
+
+A new window could cost around $500 （大约）
+
+I must ring the tax office （考虑是必要的）
+```
+半情态动词如dare，need，ought to ，used to.
+
+
+
+### 关于状态和行为动词
+
+一个动词可能涉及到行为，事件，状态包含的动作可能是：
+
+（1）瞬间
+
+（2）持续
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 # Technique
