--- a/2019/01/ARTS-2019-01-13.md
+++ b/2019/01/ARTS-2019-01-13.md
@@ -3,7 +3,7 @@
 
  [Review](#review)
 
- [Technique](#technique)
+ [Technique 如何将编程语言里面的字符串转成数字？](#technique)
 
  [Share 如何扩展python的logging组件支持json日志输出](#share)
 
@@ -48,6 +48,68 @@
 
 
 # Technique
+将字符串转成数字在很多编程语言都有相关的工具类，你知道其底层是如何实现的吗？
+
+在Java里面有工具类:
+```
+Interger.parseInt("123")
+```
+
+Python里面有工具类：
+
+```
+int("123")
+```
+其他的编程语言就不一一列举了，使用工具类进行转换人人都会，所以并不重要，重要的是我们要来学习下它底层是如何转换的，先上我用Java实现的一段代码如下：
+
+```
+    private static int stringToInt(String s){
+        //  Having one number at least.
+        if(!s.matches("\\d+")){
+            return  -1;
+        }
+
+        char []array=s.toCharArray();
+
+        int lastIndex=array.length-1;
+        int radix=0;
+        int result=0;
+
+        // right to left compute
+        while (lastIndex>=0){
+            int asciiToNumber= array[lastIndex] - 48;
+            result += Math.pow(10,radix) * asciiToNumber ;
+            radix++;
+            lastIndex--;
+        }
+
+        return  result;
+
+
+    }
+```
+
+从上面能够看到代码量并不是很多，下面我解释下是如何实现的：
+
+（1）首先对传入的字符串进行校验，必须是纯数字的，否则就返回-1.
+
+（2）在通过检查之后，将字符串转成char数组
+
+（3）为了让代码更加清晰易懂，我这里声明了三个变量，第一个就不说了，第二个代表的是10机制的基数，因为我们从个位，十位，百位....这样的进制循序渐进，所以代表的是10的几次方，比如个位是10的0次方，十位是10的1次方，百位是10的2次方，这里代表的就是从0开始的数字的个数。最后一个变量用来存储最终返回的结果。
+
+（4）ok，在循环里面我们从右到左的顺序遍历，首先将ASCII码的数字-48，转成实际的数字，至于为什么这么做，后面再说，然后按照进制进行十进制换算然后与实际的数字相乘，最后将结果累加起来，就得到了最终的值。
+
+
+比如字符串“123”，实际的结果= 3 * 10^0 + 2 * 10^1 + 1 * 10^3 = 3+20+100=123，至此转换完毕。
+
+至于为什么要拿char字符减去48才能得到实际的数字，是因为在ASCII码里，48代表0，我们看如下的ASCII码表：
+
+![image](http://www.asciitable.com/index/asciifull.gif)
+
+注意第48-57的位置分别代表了0-9的ASCII码，也就是说对于char类型的字符数字码减去48得到的值就是该字符代表的真正意义的数字。
+
+现在，你理解字符串如何转成数字了吗？当然我们这里仅仅是一个最简单的版本，没有考虑各种case，比如正负数，边界溢出，或者浮点类型等等，其思路基本都一样，感兴趣的朋友可以自己尝试。
+
 
 
 # Share
