--- a/2019/01/ARTS-2019-01-13.md
+++ b/2019/01/ARTS-2019-01-13.md
@@ -1,7 +1,7 @@
 
  [Algorithm Goat Latin](#algorithm)
 
- [Review](#review)
+ [Review Rotate Array](#review)
 
  [Technique 如何将编程语言里面的字符串转成数字？](#technique)
 
@@ -45,6 +45,42 @@
 
 
 # Review
+
+```java
+    
+    // method 1
+   public static void rotate(int[] nums, int k) {
+        k=k%nums.length;// when  k bigger than length of array , it's actually cycling through mod
+        reverse(nums,0,nums.length-1);
+        reverse(nums,0,k-1);
+        reverse(nums,k,nums.length-1);
+    }
+
+    public static void reverse(int nums[],int start, int end){
+
+        while (start<end){
+
+            int temp=nums[start];
+            nums[start]=nums[end];
+            nums[end]=temp;
+            start++;
+            end--;
+
+        }
+
+
+    }
+
+    // method 2 ： 
+    public static void rotate2(int[] nums, int k){
+        k=k % nums.length;
+       int a1[]= Arrays.copyOfRange(nums,nums.length-k,nums.length);
+       int a2[]= Arrays.copyOfRange(nums,0,nums.length-k);
+        System.arraycopy(a1,0,nums,0,a1.length);
+        System.arraycopy(a2,0,nums,k,a2.length);
+
+    }
+```
 
 
 # Technique
