--- a/2019/01/ARTS-2019-01-20.md
+++ b/2019/01/ARTS-2019-01-20.md
@@ -1,7 +1,7 @@
 
  [Algorithm Reverse Only Letters](#algorithm)
 
- [Review](#review)
+ [Review Linux查看休眠的进程状态](#review)
 
  [Technique Redis的基本原理](#technique)
 
@@ -58,6 +58,23 @@
 
 
 # Review
+
+https://askubuntu.com/questions/188106/how-to-find-sleeping-process-in-ubuntu
+https://unix.stackexchange.com/questions/36195/how-to-know-reason-of-a-process-going-to-sleep-state-and-wake-it-up
+
+查看休眠的进程：
+
+```
+ps o state,command,pid axh | grep "^[SD]"
+```
+
+
+使用strace命令查看pid的情况：
+
+```
+strace -p <pid>
+```
+
 
 
 # Technique
